package bridge;

/**
 * 品牌接口
 */
public interface IBrand {
    //开机
    void start();
    //关机
    void close();
    //拨号
    void call();
}
